Revert "Replaced ReflectionExtensions which Framework extensions"
This reverts commit 6c01d412b428eaece4ead20de07daf042b229221.

--- a/Voltmeter/Voltmeter.csproj
+++ b/Voltmeter/Voltmeter.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Binding\IBinding.cs" />
     <Compile Include="Binding\IBindingManager.cs" />
     <Compile Include="Binding\BindingManager.cs" />
+    <Compile Include="Common\Extensions\ReflectionExtensions.cs" />
     <Compile Include="Common\Extensions\StaticReflectionExtensions.cs" />
     <Compile Include="Common\Extensions\XExtensions.cs" />
     <Compile Include="Common\HashCombiner.cs" />
